--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,11 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-     <!-- <div class="nav home">
+    <!-- <div class="nav home">
           <a href="./index.html">Home</a>
      </div> -->
     <input type="text" id="datetime-picker" />
